fix:overflow issue

--- a/docs/docs_m.css
+++ b/docs/docs_m.css
@@ -586,7 +586,6 @@ body {
   user-select: none;
   cursor: crosshair;
   background-color: #1720279c;
-  overflow: hidden;
   white-space: nowrap;
   text-overflow: ellipsis;
   line-height: 2rem;
